--- a/www/app/apps/docApprove/INI/iniDetails.html
+++ b/www/app/apps/docApprove/INI/iniDetails.html
@@ -28,9 +28,9 @@
           <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <div class="list">
               <div ng-repeat="action in docDetails.ACTION_HISTORY" class="pele_rtl">
-                <div class="item item-divider item-icon-left item-icon-right text-right action-history-item">
-                  <i class="icon" ng-click="toggleActionItem(action)" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
-                  <i class="icon" ng-class="action.right_icon"></i>
+                <div ng-click="toggleActionItem(action)" class="item item-divider item-icon-left item-icon-right text-right action-history-item">
+                  <i class="icon pel_icon" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
+                  <i class="icon pel_icon" ng-class="action.right_icon"></i>
                 </div>
                 <div class="item bo-border pele_rtl text-right item-icon-left item-icon-right text-right" ng-show="action.display">
                   <div class="row">
@@ -70,7 +70,7 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
-                  <i class="icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <i class="icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">פרטי ייזום</h2>
                 </div>
@@ -115,7 +115,7 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="attach_elm=true" ng-click="attach_elm=!attach_elm">
-                  <i class="icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נספחי ייזום</h2>
                   <i class="icon ion-paperclip"></i>
                 </div>
