--- a/www/app/apps/docApprove/HR/p4_doc_807.html
+++ b/www/app/apps/docApprove/HR/p4_doc_807.html
@@ -40,7 +40,7 @@
                 <!-- <i ng-class="detail.SHOW_FLAG ? 'icon-collapse' : 'icon-expand'"></i> -->
                 <i ng-class="showIconCollapseInAcctionHistory(detail.SHOW_FLAG , detail.HIDEN_FLAG)"></i>
                 <p class="text-right pele_rtl">{{detail.SEQUENCE_NUM}}. {{detail.USER_NAME}}</p>
-                <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION , detail.ACTION_DATE , detail.NOTE)}}"></i>
+                <i class="icon pel_icon icon-left {{getApproveListActionIcon(detail.ACTION , detail.ACTION_DATE , detail.NOTE)}}"></i>
               </a>
 
               <label class="item" ng-hide="hidenAcctionHistoryDetails(detail.SHOW_FLAG, detail.HIDEN_FLAG, detail.PUSH_COUNT , detail.NOTE)">
@@ -99,7 +99,7 @@
         </label>
               <div ng-repeat="detail in docDetails.DOC_LINES" type="item-text-wrap" dir="RTL">
                 <a class="item item-divider item-icon-right" ng-click="toggleGroup(detail.ATTRIBUTE2)">
-              <i class="icon ion-android-calendar"></i>
+              <i class="icon pel_icon ion-android-calendar"></i>
               <p class="float-right">מ : {{detail.ATTRIBUTE2}}</p>
               <p class="float-right tab">עד: {{detail.ATTRIBUTE3}}</p>
               <i ng-class="isGroupShown(detail.ATTRIBUTE2) ? 'icon-expand' : 'icon-collapse'"></i>
