--- a/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
+++ b/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
@@ -34,11 +34,11 @@
             <div ng-repeat="detail in INI_ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
               <a class="item item-divider item-icon-right pele-item-icon-left" ng-hide="pelHideShow2( detail.DISPLAY_FLAG )" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1; ">
-                <!-- <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE)}}"></i> -->
+                <!-- <i class="icon pel_icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE)}}"></i> -->
                 <!--<i ng-class="detail.SHOW_FLAG ? 'icon-collapse' : 'icon-expand'"></i>-->
                 <i ng-class="showIconCollapseInAcctionHistory(detail.SHOW_FLAG , detail.HIDEN_FLAG)"></i>
                 <p class="text-right pele_rtl">{{detail.SEQUENCE_NUM}}. {{detail.EMPLOYEE_NAME}}</p>
-                <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE , detail.CHAR_ACTION_DATE , detail.NOTE)}}"></i>
+                <i class="icon pel_icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE , detail.CHAR_ACTION_DATE , detail.NOTE)}}"></i>
               </a>
 
               <label class="pele-item" ng-hide="hidenAcctionHistoryDetails(detail.SHOW_FLAG, detail.HIDEN_FLAG, detail.PUSH_COUNT , detail.NOTE)">
@@ -72,7 +72,7 @@
               <div type="item-text-wrap" ng-click="INI_DETAILS_SHOW = !INI_DETAILS_SHOW">
                 <a class="item item-divider item-icon-right">
                   <h2 class="text-right pele_rtl">פרטי יזום</h2>
-                  <i class="icon ion-clipboard"></i>
+                  <i class="icon pel_icon ion-clipboard"></i>
                 </a>
               </div>
               <div class="row" ng-show="">
@@ -148,7 +148,7 @@
               <div type="item-text-wrap" ng-click="INI_ATTACHED_DOCUMENTS_SHOW = !INI_ATTACHED_DOCUMENTS_SHOW">
                 <a class="item item-divider item-icon-right">
                   <h2 class="text-right pele_rtl">נספחי יזום</h2>
-                  <i class="icon ion-paperclip"></i>
+                  <i class="icon pel_icon ion-paperclip"></i>
                 </a>
               </div>
               <div class="item item-text-wrap text-right pele_rtl" ng-repeat="document in INI_ATTACHED_DOCUMENTS" ng-show="INI_ATTACHED_DOCUMENTS_SHOW">
