--- a/www/app/apps/docApprove/TSK/tskDetails.html
+++ b/www/app/apps/docApprove/TSK/tskDetails.html
@@ -28,9 +28,9 @@
           <ion-scroll scrollX="false" style="height:80%" scrollX="false" delegate-handle="slide1Scroll">
             <div class="list">
               <div ng-repeat="action in docDetails.ACTION_HISTORY" class="pele_rtl">
-                <div class="item item-divider item-icon-left item-icon-right text-right action-history-item">
-                  <i class="icon" ng-click="toggleActionItem(action)" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
-                  <i class="icon" ng-class="action.right_icon"></i>
+                <div ng-click="toggleActionItem(action)" class="item item-divider item-icon-left item-icon-right text-right action-history-item">
+                  <i class="icon pel_icon" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
+                  <i class="icon pel_icon" ng-class="action.right_icon"></i>
                 </div>
                 <div class="item bo-border pele_rtl text-right item-icon-left item-icon-right text-right" ng-show="action.display">
                   <div class="row">
@@ -57,10 +57,27 @@
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-left item-icon-right">
                   <h2 class="text-right pele_rtl">תיאור משימה</h2>
-                  <i class="icon ion-clipboard"></i>
+                  <i class="icon pel_icon ion-clipboard"></i>
                 </div>
                 <div class="item-section pele_rtl item-text-wrap text-right">
-                  {{docDetails.TASK_DESCRIPTION}}
+                  <table class="pele_rtl text-right" ng-repeat="description in docDetails.TASK_DESCRIPTION">
+                    <tbody>
+                      <tr>
+                        <td>
+                          <span class="label">תאריך עדכון: </span>
+                          <span class="info"> {{description.UPDATE_DATE|date:'dd-MM-yyyy HH:mm'}}</span>
+                          <span class="label">כותב התיאור : </span>
+                          <span class="info"> {{description.USER_NAME}} - {{description.ORG_HIERARCHY}}</span>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <span class="label">נושא: </span>
+                          <span class="info"> {{description.SUBJECT}}</span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </li>
             </ul>
@@ -75,8 +92,9 @@
             <ul class="list">
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
-                  <i class="icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <i class="icon ion-clipboard"></i>
+
+                  <i class="pel_icon icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">פרטי המשימה</h2>
                 </div>
                 <div class="item-section" ng-show="info_elm">
@@ -112,9 +130,9 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="sys_data=false" ng-click="sys_data=!sys_data">
-                  <i class="icon" ng-class="sys_data ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon" ng-class="sys_data ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נתוני מערכת</h2>
-                  <i class="icon ion-clipboard"></i>
+                  <i class="icon pel_icon ion-clipboard"></i>
                 </div>
                 <div class="item-section" ng-show="sys_data">
                   <table class="pele_rtl text-right">
@@ -129,9 +147,9 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="extra_elm=false" ng-click="extra_elm=!extra_elm">
-                  <i class="icon" ng-class="extra_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon" ng-class="extra_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נתונים נוספים</h2>
-                  <i class="icon ion-clipboard"></i>
+                  <i class="icon pel_icon ion-clipboard"></i>
                 </div>
                 <div class="item-section" ng-show="extra_elm">
                   <table class="pele_rtl text-right">
@@ -147,9 +165,9 @@
 
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="attach_elm=true" ng-click="attach_elm=!attach_elm">
-                  <i class="icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נספחי משימה</h2>
-                  <i class="icon ion-paperclip"></i>
+                  <i class="icon pel_icon ion-paperclip"></i>
                 </div>
                 <div class="item-section" ng-show="attach_elm">
                   <table class="pele_rtl attachments-table text-right">
