fix bugs + find and highlight

--- a/www/app/apps/docApprove/INI/iniDetails.html
+++ b/www/app/apps/docApprove/INI/iniDetails.html
@@ -28,7 +28,7 @@
           <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <div class="list">
               <div ng-repeat="action in docDetails.ACTION_HISTORY" class="pele_rtl">
-                <div ng-click="toggleActionItem(action)" class="item item-divider item-icon-left item-icon-right text-right action-history-item">
+                <div ng-click="action.left_icon && toggleActionItem(action)" class="item item-divider item-icon-left item-icon-right text-right action-history-item">
                   <i class="icon pel_icon" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
                   <i class="icon pel_icon" ng-class="action.right_icon"></i>
                 </div>
