--- a/www/app/apps/docApprove/INI/iniList.html
+++ b/www/app/apps/docApprove/INI/iniList.html
@@ -35,13 +35,14 @@
       <div ng-if="!accordion" class="docs-menu" ng-repeat="docsGroup in docsGroups">
         <div class="item docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.INFO.NOTIFICATION_ID)">
           <div class="row">
-            <div class="col col-10">
-              <img class="icon" ng-src="img/DocApprove/document_redirect.png">
-            </div>
-            <div class="col">
+
+            <div class="col-90">
               <div class="docs-menu-item-title">ייזום {{item.DOC_INIT_ID}} - {{item.INFO.AMOUNT}} {{item.INFO.CURRENCY_CODE}}</div>
               <div class="ellipsis"> {{item.INFO.DESCRIPTION}}</div>
               <div>תאריך יצירה: <span class="peldate">{{item.INFO.CREATION_DATE| date : 'hh:ss dd-MM-yyyy'}}</span> </div>
+            </div>
+            <div class="col col-10">
+              <img class="icon pel_icon" ng-src="img/DocApprove/document_redirect.png">
             </div>
           </div>
         </div>
