--- a/www/app/apps/docApprove/INV/invDetails.html
+++ b/www/app/apps/docApprove/INV/invDetails.html
@@ -3,11 +3,13 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
+
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
       <div class="title">{{title}}</div>
     </div>
   </ion-nav-title>
+
   <ion-content scroll="false">
     <tab-slide-box tab="2">
       <div class="tsb-icons">
@@ -28,9 +30,9 @@
           <ion-scroll scrollX="false" style="height:80%" scrollX="false" delegate-handle="slide1Scroll">
             <div class="list">
               <div ng-repeat="action in docDetails.ACTION_HISTORY" class="pele_rtl">
-                <div class="item item-divider item-icon-left item-icon-right text-right action-history-item">
-                  <i class="icon" ng-click="toggleActionItem(action)" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
-                  <i class="icon" ng-class="action.right_icon"></i>
+                <div ng-click="action.left_icon && toggleActionItem(action)" class="item item-divider item-icon-left item-icon-right text-right action-history-item">
+                  <i class="icon pel_icon icon-sm" ng-class="action.left_icon"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
+                  <i class="icon pel_icon icon-sm" ng-class="action.right_icon"></i>
                 </div>
                 <div class="item bo-border pele_rtl text-right item-icon-left item-icon-right text-right" ng-show="action.display">
                   <div class="row">
@@ -51,21 +53,6 @@
 
           </ion-scroll>
         </ion-slide>
-        <ion-slide>
-          <ion-scroll scrollX="false" style="height:80%" scrollX="false" delegate-handle="slide1Scroll">
-            <ul class="list">
-              <li class="item item-info no-border">
-                <div class="item item-divider item-icon-left item-icon-right">
-                  <h2 class="text-right pele_rtl">תיאור משימה</h2>
-                  <i class="icon ion-clipboard"></i>
-                </div>
-                <div class="item-section pele_rtl item-text-wrap text-right">
-                  {{docDetails.TASK_DESCRIPTION}}
-                </div>
-              </li>
-            </ul>
-          </ion-scroll>
-        </ion-slide>
         <!------------------------------------------------------------------------------->
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
@@ -73,73 +60,140 @@
           <ion-scroll class="pele_rtl text-right" scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <!-- Refresh to get the new posts -->
             <ul class="list">
+
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
-                  <i class="icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <i class="icon ion-clipboard"></i>
-                  <h2 class="text-right pele_rtl">פרטי המשימה</h2>
+                  <i class="pel_icon icon icon-sm" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon icon-md ion-clipboard"></i>
+                  <h2 class="text-right pele_rtl">פרטי החשבונית</h2>
                 </div>
                 <div class="item-section" ng-show="info_elm">
                   <table class="pele_rtl text-right">
                     <tbody>
-                      <tr>
-                        <td class="label">שם: </td>
-                        <td class="info"> {{docDetails.BAN_NAME}}</td>
-                      </tr>
-                      <tr>
-                        <td class="label">מספר לקוח: </td>
-                        <td class="info"> {{docDetails.BAN}}</td>
-                      </tr>
-                      <tr>
-                        <td class="label">נושא משימה: </td>
-                        <td class="info"> {{docDetails.TASK_TYPE}}</td>
-                      </tr>
-                      <tr>
-                        <td class="label">תת נושא: </td>
-                        <td class="info"> {{docDetails.SUB_TASK_TYPE}}</td>
-                      </tr>
-                      <tr>
-                        <td class="label">תאריך יצירה: </td>
-                        <td class="info pele_rtl"> {{docDetails.CREATION_DATE| date:'dd-MM-yyyy HH:mm'}}</td>
-                      </tr>
-                      <tr>
-                        <td class="label">האם משימה חוזרת: </td>
-                        <td class="info"> {{docDetails.RETURN_TASK}}</td>
-                      </tr>
+                    <tr>
+                      <td class="label">תיאור: </td>
+                      <td class="info"> {{docDetails.INV_DESCRIPTION}}</td>
+                    </tr>
+                    <tr>
+                      <td class="label">ספק: </td>
+                      <td class="info"> {{docDetails.VENDOR_NAME}}</td>
+                    </tr>
+                    <tr>
+                      <td class="label">סכום: </td>
+                      <td class="info">{{docDetails.AMOUNT}}{{docDetails.MINUS_SIGN}} {{docDetails.CURRENCY_CODE}}</td>
+                    </tr>
+                    <tr>
+                      <td class="label">תנאי תשלום: </td>
+                      <td class="info"> {{docDetails.TERMS_NAME}}</td>
+                    </tr>
+                    <tr>
+                      <td class="label">תאריך חשבונית: </td>
+                      <td class="info pele_rtl"> {{docDetails.INVOICE_DATE| date:'dd-MM-yyyy HH:mm'}}</td>
+                    </tr>
                     </tbody>
                   </table>
                 </div>
               </li>
+<!--
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="sys_data=false" ng-click="sys_data=!sys_data">
-                  <i class="icon" ng-class="sys_data ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <h2 class="text-right pele_rtl">נתוני מערכת</h2>
-                  <i class="icon ion-clipboard"></i>
+                  <i class="icon pel_icon icon-sm" ng-class="sys_data ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon icon-md ion-clipboard"></i>
+                  <h2 class="text-right pele_rtl">הפצה</h2>
                 </div>
-                <div class="item-section" ng-show="sys_data">
+                <div class="item-section" ng-show="sys_data" ng-repeat="item in docDetails.INVOICE_ROWS">
                   <table class="pele_rtl text-right">
                     <tbody>
-                      <tr class="pele_rtl" ng-repeat="item in docDetails.SYSTEM_INFORMATION">
-                        <td class="label">{{item.PROMPT}}: </td>
-                        <td class="info"> {{item.VALUE}}</td>
+                      <tr>
+                        <td class="label"><strong>הפצה של שורה: </strong></td>
+                        <td class="info"> {{item.ITEM}}</td>
                       </tr>
+                      <tr>
+                        <td class="label">סוג: </td>
+                        <td class="info"> {{item.ITEM}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">סכום: </td>
+                        <td class="info"> {{item.LINE_AMOUNT}}{{item.MINUS_SIGN}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">תיאור: </td>
+                        <td class="info">{{item.LINE_DESC}}</td>
+                      </tr>
+
+                      <tr>
+                        <td class="label">חשבון הוצאה: </td>
+                        <td class="info"> {{item.ACCOUNT_NUMBER}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">תקציב הזמנה: </td>
+                        <td class="info"> {{item.BUDGET}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">ת.תקציב: </td>
+                        <td class="info"> {{item.BUDGET_NAME}}</td>
+                      </tr>
+
+
                     </tbody>
                   </table>
                 </div>
               </li>
+-->
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right item-icon-left" ng-init="extra_elm=false" ng-click="extra_elm=!extra_elm">
-                  <i class="icon" ng-class="extra_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <h2 class="text-right pele_rtl">נתונים נוספים</h2>
-                  <i class="icon ion-clipboard"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="sys_data=false" ng-click="sys_data=!sys_data">
+                  <i class="icon pel_icon icon-sm" ng-class="sys_data ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon icon-md ion-clipboard"></i>
+                  <h2 class="text-right pele_rtl">הפצה</h2>
                 </div>
-                <div class="item-section" ng-show="extra_elm">
+                <div class="item-section" ng-show="sys_data" ng-repeat="item in docDetails.INVOICE_ROWS">
                   <table class="pele_rtl text-right">
                     <tbody>
-                      <tr class="pele_rtl" ng-repeat="item in docDetails.EXTRA_INFORMATION">
-                        <td class="label">{{item.PROMPT}}: </td>
-                        <td class="info"> {{item.VALUE}}</td>
+                      <tr>
+                        <td class="label"><strong>הפצה של שורה: </strong></td>
+                        <td class="info"><strong>{{$index+1}}</strong></td>
                       </tr>
+                      <tr>
+                        <td class="label">סוג: </td>
+                        <td class="info"> {{item.ITEM}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">סכום: </td>
+                        <td class="info"> {{item.LINE_AMOUNT}}{{item.MINUS_SIGN}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">תיאור: </td>
+                        <td class="info">{{item.LINE_DESC}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">חשבון הוצאה: </td>
+                        <td class="info"> {{item.ACCOUNT_NUMBER}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">תקציב הזמנה: </td>
+                        <td class="info"> {{item.BUDGET}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">ת.תקציב: </td>
+                        <td class="info"> {{item.BUDGET_NAME}}</td>
+                      </tr>
+                      <tr class="pele_rtl">
+                        <td class="label">מתאריך: </td>
+                        <td class="info"> {{item.FROM_DATE}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">עד תאריך: </td>
+                        <td class="info"> {{item.TO_DATE}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">הזמנה: </td>
+                        <td class="info"> {{item.ORDER_NUMBER}}</td>
+                      </tr>
+                      <tr>
+                        <td class="label">קבלה: </td>
+                        <td class="info"> {{item.RECEIPT_NUMBER}}</td>
+                      </tr>
+                      <tr>&nbsp</tr>
                     </tbody>
                   </table>
                 </div>
@@ -147,15 +201,15 @@
 
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="attach_elm=true" ng-click="attach_elm=!attach_elm">
-                  <i class="icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-                  <h2 class="text-right pele_rtl">נספחי משימה</h2>
-                  <i class="icon ion-paperclip"></i>
+                  <i class="icon pel_icon icon-sm" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <h2 class="text-right pele_rtl">נספחי חשבונית</h2>
+                  <i class="icon pel_icon icon-md ion-paperclip"></i>
                 </div>
                 <div class="item-section" ng-show="attach_elm">
                   <table class="pele_rtl attachments-table text-right">
                     <tbody>
-                      <tr class="pele_rtl" ng-repeat="file in docDetails.attachments | filter:{ DISPLAY: 'Y' }">
-                        <td class="num_index"> {{$index+1}} . </td>
+                      <tr class="pele_rtl" ng-repeat="file in docDetails.ATTACHMENT_FILES | filter:{ DISPLAY: 'Y' }">
+                        <!-- <td class="num_index"> {{$index+1}} . </td> -->
                         <td class="info pele_ltr">
                           <span ng-click="openAttachment(file)" ng-class="'show_content_'+file.SHOW_CONTENT"> {{file.DISPLAY_NAME}}</span>
                         </td>
@@ -164,6 +218,7 @@
                   </table>
                 </div>
               </li>
+
             </ul>
 
           </ion-scroll>
