--- a/www/app/apps/docApprove/INV/invList.html
+++ b/www/app/apps/docApprove/INV/invList.html
@@ -23,15 +23,23 @@
 
     <ion-list>
       <div class="docs-menu" ng-repeat="docsGroup in docsGroups">
-        <ion-item class="docs-menu-head item-stable" ng-click="docsGroup.active=!docsGroup.active" ng-class="{active: docsGroup.active}">
-          <a ng-class="docsGroup.active ? 'icon-expand' : 'icon-collapse'"></a> {{docsGroup.DOC_NAME}} <span class="pel-badge light-blue">{{filtered.length}}</span>
+
+        <ion-item class="item-stable" ng-click="docsGroup.active=!docsGroup.active" ng-class="{active: docsGroup.active}">
+          <div class="row">
+            <div class="col ellipsis">
+              <ion-icon ng-class="docsGroup.active ? 'ion-arrow-left-b' : 'ion-arrow-down-b'"></ion-icon>
+              {{docsGroup.DOC_NAME}}
+            </div>
+            <div class="col col-10"><span class="pel-badge light-blue">{{filtered.length}}</span> </div>
+          </div>
         </ion-item>
+
         <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-show="docsGroup.active" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
-          <img class="icon" ng-src="img/DocApprove/document_redirect.png">
-          <div class="docs-menu-item-title"> משימה {{item.DOC_INIT_ID}}</div>
-          <div><strong>{{item.TASK.BAN_NAME}}</strong></div>
-          <div>סיום משוער לטיפול בלקוח
-            <span class="peldate">{{item.TASK.PLANNED_END_DATE|peldate | date : 'hh:ss dd-MM-yyyy'}}</span> </div>
+          <img class="icon doc-redirect" ng-src="img/DocApprove/document_redirect.png">
+          <div class=""><strong> חש' {{item.TASK.INVOICE_NUM}}{{item.TASK.AMOUNT}}{{item.TASK.MINUS_SIGN}} {{item.TASK.CURRENCY_CODE}} </strong></div>
+          <div>{{item.TASK.VENDOR_NAME}}</div>
+          <div> ת. חשבונית:
+            <span class="peldate">{{item.TASK.INV_CREATION_DATE|peldate | date : 'hh:ss dd-MM-yyyy'}}</span></div>
         </ion-item>
       </div>
     </ion-list>
