--- a/www/app/apps/dev/devmenu.html
+++ b/www/app/apps/dev/devmenu.html
@@ -8,8 +8,7 @@
       <div class="title"> תפריט מפתחים </div>
     </div>
   </ion-nav-title>
-  <ion-content class="pele-background" scroll="false">
-
+  <ion-content class="pele-background">
     <div class="list">
       <a class="item pele_rtl">LocalStorage usage :  {{getLocalStorageUsage().mb}} MB  <br \>
       largest - {{getLocalStorageUsage().largetKey}} :  {{getLocalStorageUsage().maxSize}}</a>
