--- a/www/app/apps/docApprove/p2_moduleList.html
+++ b/www/app/apps/docApprove/p2_moduleList.html
@@ -1,5 +1,4 @@
 <ion-view cache-view="false">
-
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
@@ -21,22 +20,11 @@
       <div class="col"></div>
     </div>
     <div ng-if="1" class="apps-front-menu">
-      <div class="menu-item" ng-repeat="source in category_sources">
+      <div class="menu-item" ng-class="{reduce:category_sources.length >= 5}" ng-repeat="source in category_sources">
         <button ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )" class="button button-large button-stable button-block item-icon-right">
       {{source.MODULE_DESC}} <span class="pel-badge blue">{{source.DOCUMENT_QTY}}</span>
 
       </button>
-      </div>
-    </div>
-    <div ng-if="0" ng-repeat="source in category_sources" class="text-center apps-menu">
-      <div class="row {{isShowBtn(source.DOCUMENT_QTY)}}" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )" ng-model="btn_class.on_release" on-touch="source.PUSH_FLAG = !source.PUSH_FLAG " on-release="source.PUSH_FLAG = !source.PUSH_FLAG">
-        <div class="col col-10"></div>
-        <div class="col col-80 item item-icon-right {{pushBtnClass(source.PUSH_FLAG)}}">
-          <div class="app-button">
-            <p class="description">{{source.MODULE_DESC}}&nbsp;&nbsp;({{source.DOCUMENT_QTY}})</p>
-          </div>
-        </div>
-        <div class="col col-10"></div>
       </div>
     </div>
   </ion-content>
