--- a/www/app/apps/docApprove/INI/iniDetails.html
+++ b/www/app/apps/docApprove/INI/iniDetails.html
@@ -117,7 +117,7 @@
               </li>
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="lines_elm=false" ng-click="lines_elm=!lines_elm">
-                  <i class="icon pel_icon icon-sm" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+                  <i class="icon pel_icon icon-sm" ng-class="lines_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">שורות ייזום</h2>
                   <i class="icon pel_icon icon-md ion-navicon"></i>
                 </div>
@@ -127,7 +127,7 @@
                   <table class="init_lines_table pele_rtl text-right" ng-repeat="line in docDetails.INIT_LINES">
                     <thead>
                       <th class="label"> שורה {{line.LINE_NUM}}: </th>
-                      <th class="item-text-wrap">
+                      <th class="item-text-wrap info">
                         {{line.ITEM}}
                       </th>
                     </thead>
