add dept & budget code to ini details view

--- a/www/app/apps/docApprove/INI/iniDetails.html
+++ b/www/app/apps/docApprove/INI/iniDetails.html
@@ -148,6 +148,14 @@
                         <td class="label">שם ספק: </td>
                         <td class="info"> {{line.VENDOR}} </td>
                       </tr>
+                      <tr>
+                        <td class="label">קוד מחלקה: </td>
+                        <td class="info"> {{line.DEPT_CODE}} </td>
+                      </tr>
+                      <tr>
+                        <td class="label">קוד תקציב: </td>
+                        <td class="info"> {{line.BUDGET_CODE}} </td>
+                      </tr>
                     </tbody>
                   </table>
 
