--- a/www/app/apps/docApprove/TSK/tskDetails.html
+++ b/www/app/apps/docApprove/TSK/tskDetails.html
@@ -186,10 +186,13 @@
                   <h2 class="text-right pele_rtl">נספחי משימה</h2>
                   <i class="icon pel_icon icon-md ion-paperclip"></i>
                 </div>
-                <div class="item-section" ng-show="attach_elm">
+                <div class="item-section" ng-show="displayable && displayable.length==0">
+                  לא קיימים מסמכים מצורפים
+                </div>
+                <div class="item-section" ng-show="attach_elm && displayable.length">
                   <table class="pele_rtl attachments-table text-right">
                     <tbody>
-                      <tr class="pele_rtl" ng-repeat="file in docDetails.attachments | filter:{ DISPLAY: 'Y' }">
+                      <tr class="pele_rtl" ng-repeat="file in docDetails.attachments | filter:{ DISPLAY: 'Y' } as displayable">
                         <td class="num_index"> {{$index+1}} . </td>
                         <td class="info pele_ltr">
                           <span ng-click="openAttachment(file)" ng-class="'show_content_'+file.SHOW_CONTENT"> {{file.DISPLAY_NAME}}</span>
