--- a/www/app/apps/docApprove/INV/invDetails.html
+++ b/www/app/apps/docApprove/INV/invDetails.html
@@ -42,7 +42,7 @@
                   </div>
                   <div class="row">
                     <div class="col">תאריך:</div>
-                    <div class="col col-75">{{action.ACTION_DATE}}</div>
+                    <div class="col col-75">{{action.ACTION_DATE | date : 'hh:ss dd-MM-yyyy'}}</div>
                   </div>
                   <div class="row">
                     <div class="col">הערות:</div>
@@ -148,7 +148,10 @@
                   <h2 class="text-right pele_rtl">הפצה</h2>
                 </div>
                 <div class="item-section" ng-show="sys_data" ng-repeat="item in docDetails.INVOICE_ROWS">
-                  <table class="pele_rtl text-right">
+                  <div class="err h4" ng-show="item.ERR_MESSAGE">
+                    {{item.ERR_MESSAGE}}
+                  </div>
+                  <table ng-show="!item.ERR_MESSAGE" class="pele_rtl text-right">
                     <tbody>
                       <tr>
                         <td class="label"><strong>הפצה של שורה: </strong></td>
