--- a/www/app/apps/docApprove/TSK/tskDetails.html
+++ b/www/app/apps/docApprove/TSK/tskDetails.html
@@ -40,7 +40,7 @@
                   </div>
                   <div class="row">
                     <div class="col">תאריך:</div>
-                    <div class="col col-75">{{action.ACTION_DATE}}</div>
+                    <div class="col col-75">{{action.ACTION_DATE| date : 'hh:ss dd-MM-yyyy'}}</div>
                   </div>
                   <div class="row">
                     <div class="col">הערות:</div>
@@ -168,7 +168,7 @@
                   <h2 class="text-right pele_rtl">נתונים נוספים</h2>
                   <i class="icon pel_icon icon-md ion-clipboard"></i>
                 </div>
-                <div class="item-section" ng-show="extra_elm">
+                <div class="item-section" ng-show="extra_elm && docDetails.EXTRA_INFORMATION">
                   <table class="pele_rtl text-right">
                     <tbody>
                       <tr class="pele_rtl" ng-repeat="item in docDetails.EXTRA_INFORMATION">
