preserve Accordion on page refreh

--- a/www/app/apps/docApprove/INV/invList.html
+++ b/www/app/apps/docApprove/INV/invList.html
@@ -24,7 +24,7 @@
     <ion-list>
       <div class="docs-menu" ng-repeat="docsGroup in docsGroups">
 
-        <ion-item class="item-stable" ng-click="docsGroup.active=!docsGroup.active" ng-class="{active: docsGroup.active}">
+        <ion-item class="item-stable" ng-click="toggleActive(docsGroup)" ng-class="{active: docsGroup.active}">
           <div class="row">
             <div class="col ellipsis">
               <ion-icon ng-class="docsGroup.active ? 'ion-arrow-left-b' : 'ion-arrow-down-b'"></ion-icon>
@@ -34,7 +34,7 @@
           </div>
         </ion-item>
 
-        <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-show="docsGroup.active" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
+        <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-show="activeGroup[docsGroup.DOC_NAME]" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
           <img class="icon doc-redirect" ng-src="img/DocApprove/document_redirect.png">
           <div class=""><strong>  <span ng-show="item.TASK.ADD_TITLE" class="string-badge">{{item.TASK.ADD_TITLE}} </span> חש' {{item.TASK.INVOICE_NUM}} ע"ס {{item.TASK.AMOUNT}}{{item.TASK.MINUS_SIGN}} {{item.TASK.CURRENCY_CODE}} </strong>
           </div>
