--- a/www/app/apps/docApprove/TSK/tskList.html
+++ b/www/app/apps/docApprove/TSK/tskList.html
@@ -22,7 +22,7 @@
     </label>
     <ion-list>
       <div class="docs-menu" ng-repeat="docsGroup in docsGroups">
-        <ion-item class="item-stable" ng-click="docsGroup.active=!docsGroup.active" ng-class="{active: docsGroup.active}">
+        <ion-item class="item-stable" ng-click="toggleActive(docsGroup)" ng-class="{active: docsGroup.active}">
           <div class="row">
             <div class="col ellipsis">
               <ion-icon ng-class="docsGroup.active ? 'ion-arrow-left-b' : 'ion-arrow-down-b'"></ion-icon>
@@ -31,7 +31,7 @@
             <div class="col col-10"><span class="pel-badge light-blue">{{filtered.length}}</span> </div>
           </div>
         </ion-item>
-        <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-show="docsGroup.active" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
+        <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-show="activeGroup[docsGroup.DOC_NAME]" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
           <img class="icon doc-redirect" ng-src="img/DocApprove/document_redirect.png">
           <div class=""> <span ng-show="item.TASK.ADD_TITLE" class="string-badge">{{item.TASK.ADD_TITLE}} </span> משימה {{item.TASK.TASK_NUMBER}}</div>
           <div class="ellipsis ellipsis_90"><strong>{{item.TASK.BAN_NAME}}</strong></div>
